styles/style.css
/* page */

.page {
  font-family: Inter, sans-serif;
  background: #f4f4f4;
}

/* header */

.header {
  position: fixed;
  top: 0;
  left: 0;
  z-index: 1;
  width: 100%;
  background: #f4f4f4;
}

.header__container {
  max-width: 1200px;
  min-height: 74px;
  margin: 0 auto;
  display: flex;
  align-items: center;
  justify-content: flex-end;
}

@media (max-width: 1279px) {
  .header__container {
    padding: 0 36px;
    gap: 60px;
  }
}

@media (max-width: 1023px) {
  .header__container {
    padding: 0 27px;
  }
}

@media (max-width: 767px) {
  .header__container {
    padding: 0 18px;
  }
}

.header__nav {}

.header__list {
  margin: 0;
  padding: 0;
  display: flex;
  align-items: center;
  justify-content: center;
  gap: 34px;
  list-style: none;
}

@media (max-width: 1023px) {
  .header__list {
    gap: 30px;
  }
}

@media (max-width: 767px) {
  .header__list {
    gap: 20px;
  }
}

.header__item {}

.header__link {
  font-size: 14px;
  font-weight: 500;
  line-height: 1.29;
  text-decoration: none;
  color: #151515;
  transition: 1s;
}

.header__link:hover {
  color: #ff3d00;
  transition: .5s;
}

/* main */

.main {
  padding: 74px 0 0;
}

/* quote */

.quote {
  max-width: 1200px;
  margin: 0 auto;
  padding: 120px 0 60px;
  display: flex;
  align-items: flex-start;
  justify-content: space-between;
  gap: 80px;
}

@media (max-width: 1279px) {
  .quote {
    padding: 120px 36px 60px;
    gap: 60px;
  }
}

@media (max-width: 1023px) {
  .quote {
    gap: 40px;
    padding: 60px 27px;
  }
}

@media (max-width: 767px) {
  .quote {
    gap: 20px;
    padding: 40px 18px;
  }
}

@media (max-width: 576px) {
  .quote {
    flex-direction: column;
    gap: 40px;
  }
}

.quote__image {
  width: 100%;
  max-width: 650px;
  max-height: 460px;
  object-fit: cover;
}

@media (max-width: 1279px) {
  .quote__image {
    max-width: 540px;
  }
}

@media (max-width: 1023px) {
  .quote__image {
    max-width: 400px;
  }
}

@media (max-width: 767px) {
  .quote__image {
    max-width: 284px;
    min-height: 204px;
  }
}

@media (max-width: 576px) {
  .quote__image {
    max-width: 100%;
    padding: 20px 0 0;
    border-top: 1px solid #e3e3e3;
  }
}

.quote__content {
  align-self: stretch;
  display: flex;
  flex-direction: column;
  justify-content: space-between;
}

.quote__text {
  margin: 0;
  font-size: 34px;
  font-weight: 600;
  line-height: 1.29;
  letter-spacing: -.5px;
  color: #151515;
}

@media (max-width: 1023px) {
  .quote__text {
    font-size: 27px;
  }
}

@media (max-width: 767px) {
  .quote__text {
    margin: 0 0 40px 0;
    font-size: 23px;
    line-height: 1.26;
  }
}

.quote__author {}

.quote__author-name {
  margin: 0 0 6px 0;
  font-size: 20px;
  font-weight: 500;
  line-height: 1.6;
  color: #151515;
}

@media (max-width: 1023px) {
  .quote__author-name {
    font-size: 16px;
  }
}

@media (max-width: 767px) {
  .quote__author-name {
    margin: 0 0 4px 0;
    font-size: 14px;
    line-height: 1.57;
  }
}

.quote__author-profession {
  margin: 0;
  font-size: 16px;
  font-weight: 400;
  line-height: 1.75;
  color: #222;
  opacity: .7;
}

@media (max-width: 1023px) {
  .quote__author-profession {
    font-size: 14px;
  }
}

@media (max-width: 767px) {
  .quote__author-profession {
    font-size: 10px;
    line-height: 1.6;
  }
}

/* bicycles */

.bicycles {
  max-width: 1200px;
  margin: 0 auto;
  padding: 60px 0;
}

@media (max-width: 1279px) {
  .bicycles {
    padding: 60px 36px;
  }
}

@media (max-width: 1023px) {
  .bicycles {
    padding: 60px 27px;
  }
}

@media (max-width: 767px) {
  .bicycles {
    padding: 40px 18px;
  }
}

.bicycles__header {
  margin: 0 0 120px 0;
  display: flex;
  align-items: flex-end;
  justify-content: space-between;
}

@media (max-width: 1279px) {
  .bicycles__header {
    margin: 0 0 60px 0;
  }
}

@media (max-width: 1024px) {
  .bicycles__header {
    margin: 0 0 40px 0;
  }
}

@media (max-width: 767px) {
  .bicycles__header {
    margin: 0 0 20px 0;
  }
}

@media (max-width: 576px) {
  .bicycles__header {
    padding: 40px 0 0;
    flex-direction: column;
    align-items: flex-start;
    gap: 40px;
    border-top: 1px solid #e3e3e3;
  }
}

.bicycles__title {
  margin: 0;
  font-size: 55px;
  font-weight: 700;
  line-height: 1.09;
  letter-spacing: -.5px;
  color: #151515;
}

@media (max-width: 1023px) {
  .bicycles__title {
    font-size: 42px;
  }
}

@media (max-width: 767px) {
  .bicycles__title {
    font-size: 32px;
    line-height: 1.25;
  }
}

.bicycles__list {
  margin: 0;
  padding: 0;
  display: flex;
  align-items: center;
  justify-content: center;
  gap: 40px;
  list-style: none;
}

@media (max-width: 1024px) {
  .bicycles__list {
    gap: 30px;
  }
}

@media (max-width: 767px) {
  .bicycles__list {
    display: none;
  }
}

.bicycles__item {}

.bicycles__link {
  font-size: 18px;
  font-weight: 400;
  line-height: 1.56;
  text-decoration: none;
  color: #222;
  opacity: .7;
  transition: 1s;
}

@media (max-width: 1024px) {
  .bicycles__link {
    font-size: 16px;
  }
}

.bicycles__link:hover {
  color: #ff3d00;
  opacity: 1;
  transition: .5s;
}

.bicycles__link_active {
  font-weight: 600;
  color: #151515;
  opacity: 1;
  transition: 1s;
}

.bicycles__link_active:hover {
  color: #ff3d00;
  transition: .5s;
}

.bicycles__select {
  display: none;
}

.bicycles__select:hover {
  border: 1px solid #24b47e;
}

.bicycles__select:focus {
  outline: 0;
  border: 1px solid #ff3d00;
}

@media (max-width: 767px) {
  .bicycles__select {
    width: 100%;
    max-width: 114px;
    min-height: 30px;
    display: block;
    font-size: 11px;
    font-weight: 600;
    line-height: 1.27;
    text-indent: 7px;
    color: #151515;
    background: #f4f4f4;
    border: 1px solid #e3e3e3;
    border-radius: 2px;
  }
}

.bicycles__option {
  padding: 0;
  font-weight: 400;
  color: rgba(34, 34, 34, .7);
}

.bicycles__card-list {
  margin: 0;
  padding: 0;
  display: flex;
  align-items: flex-start;
  justify-content: center;
  gap: 30px;
  list-style: none;
}

@media (max-width: 576px) {
  .bicycles__card-list {
    margin: 0 0 20px 0;
    gap: 20px;
  }
}

.bicycles__card-item {}

@media (max-width: 576px) {
  .bicycles__card-item:nth-child(n+2) {
    display: none;
  }
}

@media (max-width: 767px) {
  .bicycles__card-item {
    padding: 15px 15px 16px;
    background: #f4f4f4;
    border-radius: 20px;
    filter: drop-shadow(0px 20px 140px rgba(0, 0, 0, 0.06));
    font-size: 32px;
    line-height: 1.25;
  }
}

.bicycles__card-link {
  text-decoration: none;
}

.bicycles__figure {
  margin: 0;
}

.bicycles__card-link:hover {}

.bicycles__image {
  display: block;
  box-sizing: border-box;
  width: 100%;
  max-width: 380px;
  max-height: 380px;
  margin: 0 0 22px 0;
  padding: 20px;
  background: #f4f4f4;
  border-radius: 20px;
  filter: drop-shadow(0px 20px 140px rgba(0, 0, 0, 0.06));
}

@media (max-width: 1024px) {
  .bicycles__image {
    margin: 0 0 11px 0;
  }
}

@media (max-width: 767px) {
  .bicycles__image {
    margin: 0 0 3px 0;
    padding: 0;
    filter: none;
  }
}

@media (max-width: 576px) {
  .bicycles__image {
    max-width: 100%;
    height: 100%;
  }
}

.bicycles__image-caption {
  font-size: 18px;
  font-weight: 600;
  line-height: 1.22;
  color: #151515;
  transition: 1s;
}

@media (max-width: 1023px) {
  .bicycles__image-caption {
    font-size: 16px;
  }
}

@media (max-width: 767px) {
  .bicycles__image-caption {
    padding: 0;
    font-size: 14px;
    line-height: 1.29;
    text-align: center;
  }
}

.bicycles__card-link:hover .bicycles__image-caption {
  color: #ff3d00;
  transition: .5s;
}

.bicycles__dots {
  display: none;
}

@media (max-width: 576px) {
  .bicycles__dots {
    display: flex;
    align-items: center;
    justify-content: center;
    gap: 5px;
  }
}

.bicycles__dot {
  width: 4px;
  height: 4px;
  background: #cacaca;
  border-radius: 100%;
  transition: 1s;
}

.bicycles__dot:hover {
  background: #ff3d00;
  transition: .5s;
}

.bicycles__dot_active {
  background: #151515;
}

/* footer */

.footer {
  padding: 80px 0 60px;
  background: #efefef;
}

@media (max-width: 1024px) {
  .footer {
    padding: 60px 0 40px;
  }
}

@media (max-width: 767px) {
  .footer {
    padding: 60px 0 25px;
  }
}

.footer__container {
  max-width: 1200px;
  margin: 0 auto;
}

@media (max-width: 1279px) {
  .footer__container {
    padding: 0 36px;
  }
}

@media (max-width: 1023px) {
  .footer__container {
    padding: 0 27px;
  }
}

@media (max-width: 767px) {
  .footer__container {
    padding: 0 18px;
  }
}

.footer__form {
  margin: 0 0 100px 0;
}

.footer__label {
  display: block;
  max-width: 229px;
  margin: 0 0 50px 0;
  font-size: 24px;
  font-weight: 600;
  line-height: 1.33;
  color: #151515;
}

@media (max-width: 767px) {
  .footer__label {
    margin: 0 0 40px 0;
  }
}

@media (max-width: 576px) {
  .footer__label {
    max-width: 100%;
  }
}

.footer__email {
  box-sizing: border-box;
  width: 100%;
  max-width: 360px;
  min-height: 50px;
  margin: 0;
  font-size: 13px;
  font-weight: 500;
  line-height: 2.15;
  text-indent: 17px;
  color: #151515;
  border: 1px solid #c7c7c780;
  border-radius: 4px;
}

@media (max-width: 576px) {
  .footer__email {
    max-width: 100%;
  }
}

.footer__email:hover {
  border: 1px solid #24b47e;
}

.footer__email:focus {
  outline: 0;
  border: 1px solid #ff3d00;
}

.footer__email::placeholder {
  color: #151515;
  opacity: .7;
}

.footer__copyright {
  margin: 0;
  font-size: 14px;
  font-weight: 600;
  line-height: 1.4;
  color: #cfcfcf;
}

